# text-paint

./: Cargo.toml  shell.nix  test.sh
resources/: test_config.toml  test_palette.toml
src/: app.rs  config.rs  main.rs  palette.rs  parse_colour.rs
