[package]
name = "text-paint"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]

[dependencies]
meap = "0.8"
toml = "0.8"
nom = "7.1"
serde = { version = "1.0", features = ["serde_derive"] }
bincode = "1.3"
chargrid = { version = "0.12", features = ["serialize"] }
chargrid_wgpu = "0.5"
chargrid_ansi_terminal = "0.6"
grid_2d = { version = "0.15", features = ["serialize"] }
line_2d = "0.5"
rgb_int = { version = "0.1", features = ["serialize"] }
direction = "0.18"
